src/test/deca/context/invalid/homemade/override_method_as_field_decompile.res
class A extends Object {
	int x;
	void y() {
	}
}
class B extends A {
	boolean y;
	int z() {
		return 4;
	}
}
